After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700297 - bliptv: Fix crash when browsing on 64-bit platforms
bliptv: Fix crash when browsing on 64-bit platforms
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2013-05-14 13:28 UTC by Bastien Nocera
Modified: 2013-05-15 07:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bliptv: Fix crash when browsing on 64-bit platforms (1.55 KB, patch)
2013-05-14 13:28 UTC, Bastien Nocera
committed Details | Review
raitv: Fix crasher on 64-bit platforms (3.76 KB, patch)
2013-05-14 13:29 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-05-14 13:28:55 UTC
.
Comment 1 Bastien Nocera 2013-05-14 13:28:57 UTC
Created attachment 244172 [details] [review]
bliptv: Fix crash when browsing on 64-bit platforms

gsize on 64-bit platforms is a 64-bit integer. Trying to fit a 64-bit
integer in the 32-bit integer we were passed trashed the pointer of the
previous return parameter, in this case the buffer's address.

Pass a pointer to correctly sized integer to avoid this memory
corruption and cast it later as needed.
Comment 2 Bastien Nocera 2013-05-14 13:29:27 UTC
Created attachment 244173 [details] [review]
raitv: Fix crasher on 64-bit platforms

gsize on 64-bit platforms is a 64-bit integer. Trying to fit a 64-bit
integer in the 32-bit integer we were passed trashed the pointer of the
previous return parameter, in this case the buffer's address.

Pass a pointer to correctly sized integer to avoid this memory
corruption and cast it later as needed.
Comment 3 Juan A. Suarez Romero 2013-05-15 07:34:24 UTC
commit 2a3958619c174010ecc75e440387ca85217a3288
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue May 14 15:24:41 2013 +0200

    raitv: Fix crasher on 64-bit platforms
    
    gsize on 64-bit platforms is a 64-bit integer. Trying to fit a 64-bit
    integer in the 32-bit integer we were passed trashed the pointer of the
    previous return parameter, in this case the buffer's address.
    
    Pass a pointer to correctly sized integer to avoid this memory
    corruption and cast it later as needed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=700297

 src/raitv/grl-raitv.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)

commit a406cd005dfe4bfd0bb817e67e6b6b2d8f20c0ed
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue May 14 15:22:00 2013 +0200

    bliptv: Fix crash when browsing on 64-bit platforms
    
    gsize on 64-bit platforms is a 64-bit integer. Trying to fit a 64-bit
    integer in the 32-bit integer we were passed trashed the pointer of the
    previous return parameter, in this case the buffer's address.
    
    Pass a pointer to correctly sized integer to avoid this memory
    corruption and cast it later as needed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=700297

 src/bliptv/grl-bliptv.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)


Attachment 244172 [details] pushed as a406cd0 - bliptv: Fix crash when browsing on 64-bit platforms
Attachment 244173 [details] pushed as 2a39586 - raitv: Fix crasher on 64-bit platforms